--- a/styles.css
+++ b/styles.css
@@ -2232,6 +2232,7 @@ button[type="submit"],
     width: 100%;
     height: auto;
     border-radius: 12px;
+    margin-top: -100px;
 }
 
 /* Responsive for second screen */
