--- a/styles.css
+++ b/styles.css
@@ -2220,7 +2220,8 @@ button[type="submit"],
     font-weight: 700;
     color: #1a1a1a;
     margin-bottom: 20px;
-    margin-top: -60px;
+    margin-top: -40px;
+    margin-left: 20%;
     line-height: 1.2;
 }
 
