--- a/styles.css
+++ b/styles.css
@@ -2262,7 +2262,7 @@ button[type="submit"],
     border-right: 3px solid transparent;
     white-space: nowrap;
     width: 0;
-    animation: typing-line-1 2.5s steps(25, end), cursor-line-1 2.5s steps(25, end);
+    animation: typing-line-1 2.5s steps(25, end), cursor-line-1 2.5s linear;
     animation-delay: 0.5s;
     animation-fill-mode: both;
 }
@@ -2273,7 +2273,7 @@ button[type="submit"],
     border-right: 3px solid transparent;
     white-space: nowrap;
     width: 0;
-    animation: typing-line-2 2.5s steps(25, end), cursor-line-2 2.5s steps(25, end);
+    animation: typing-line-2 2.5s steps(25, end), cursor-line-2 2.5s linear;
     animation-delay: 4s;
     animation-fill-mode: both;
 }
