--- a/styles.css
+++ b/styles.css
@@ -480,9 +480,9 @@ body {
     flex: 1;
     background: transparent;
     border: none;
-    color: #228B22;
+    color: #36454F;
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 900;
     font-style: italic;
     padding: 0;
     outline: none;
@@ -498,9 +498,9 @@ body {
 .state-select {
     background: transparent;
     border: none;
-    color: #228B22;
+    color: #36454F;
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 900;
     font-style: italic;
     padding: 0;
     outline: none;
@@ -510,8 +510,8 @@ body {
 
 .state-select option {
     background: #F5F5DC;
-    color: #228B22;
-    font-weight: bold;
+    color: #36454F;
+    font-weight: 900;
     font-style: italic;
 }
 
@@ -519,9 +519,9 @@ body {
     flex: 1;
     background: transparent;
     border: none;
-    color: #228B22;
+    color: #36454F;
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 900;
     font-style: italic;
     padding: 0;
     outline: none;
